--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+.page-title {
+  display: block !important;
   text-align: center;
+  margin-top: 15px;
+  margin-left: 150px;
+  margin-right: 150px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.page-title h2 {
+  font-size: 20px; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 768px, min-width: 300px) {
+  .page-title {
+    padding-top: 15px !important; 
+    width: 200px; 
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .page-title h2 {
+    font-size: 15px; 
   }
-  to {
-    transform: rotate(360deg);
+
+  .page-title2 h2 {
+    font-size: 15px; 
   }
+
+ 
 }
